# MIE443-Turtlebot-Contests

./: README.md
Contest 1/: contest1.cpp  launch_contest1.sh  launch_contest1_irl.sh  testroom1.sdf.txt
Contest 2/: contest2.cpp  contest2_launcher.bash  contest2_v1.cpp  coord.txt  launch_contest2.sh  launch_contest2_v2.bash  run_contest2_real.sh  run_contest2_sim.sh  yolo_detector.py  yolo_detector_v2.py
Contest 2/FInal_Contest/: apriltag_detector.cpp  arm_controller.cpp  boxes.cpp  contest2.cpp  image_capture_server.cpp  navigation.cpp  robot_pose.cpp  yolo.cpp  yoloInterface.cpp  yolo_detector.py
Contest 2/maps/: Contest2MapPractice.pgm  Contest2MapPractice.yaml
Contest 2/mie443_contest2/: contest2.cpp
Contest 2/mie443_contest2/mie443_contest2/lerobot_controller/: CMakeLists.txt  package.xml
Contest 2/mie443_contest2/mie443_contest2/lerobot_controller/launch/: so101_controller.launch.py
Contest 2/mie443_contest2/mie443_contest2/lerobot_controller/scripts/: so101_bridge.py  so101_test.py  teleop_follower.py  teleop_leader.py
Contest 2/mie443_contest2/mie443_contest2/lerobot_description/launch/: so101_display.launch.py  so101_gazebo.launch.py
Contest 2/mie443_contest2/mie443_contest2/lerobot_description/rviz/: display.rviz
Contest 2/mie443_contest2/mie443_contest2/lerobot_description/urdf/: so101.urdf  so101.urdf.xacro  so101_base.xacro  so101_gazebo.xacro
Contest 2/mie443_contest2/mie443_contest2/lerobot_moveit/config/: moveit.rviz  so101.srdf
Contest 2/mie443_contest2/mie443_contest2/lerobot_moveit/launch/: so101_laptop.launch.py  so101_moveit.launch.py  so101_real.launch.py  so101_turtlebot.launch.py
Contest 2/mie443_contest2/mie443_contest2/mie443_contest2/: CMakeLists.txt  package.xml
Contest 2/mie443_contest2/mie443_contest2/mie443_contest2/boxes_database/: cords.xml
Contest 2/mie443_contest2/mie443_contest2/mie443_contest2/include/mie443_contest2/: apriltag_detector.h  arm_controller.h  boxes.h  navigation.h  robot_pose.h  yoloInterface.h
Contest 2/mie443_contest2/mie443_contest2/mie443_contest2/msg/: YoloDetection.msg
Contest 2/mie443_contest2/mie443_contest2/mie443_contest2/src/: arm_controller.cpp  contest2.cpp  navigation.cpp  yoloInterface.cpp
Contest 2/mie443_contest2/mie443_contest2/mie443_contest2/srv/: CaptureImage.srv  DetectObject.srv
