<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mie443_contest2</name>
  <version>1.0.0</version>
  <description>MIE443 Contest 2</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Navigation dependencies -->
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>

  <!-- MoveIt dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>

  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Image processing dependencies -->
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <!-- Utilities -->
  <depend>ament_index_cpp</depend>

  <!-- External libraries -->
  <depend>libopencv-dev</depend>
  <depend>liborocos-kdl-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
